Fix compilation without PCH after r73365.

Need to explicitly include wx/dialog.h to use wxDynamicCast to wxDialog.

See #14961.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73367 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775